<resources>
    <string name="app_name">TravelCove</string>
    <string name="logo_name">Take a trip</string>
    <string name="slogan_name">We will help you to find your way!</string>

    <!--Titles-->
    <string name="first_slide_title">Search Your Destination</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Favourite Places</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="all_categories">All Categories</string>
    <string name="instruction">Instruction</string>
    <string name="exit">Exit</string>


    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place you want. We will display specific or all related places to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all nearby hotels. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you want to save some favourite places, we will provide you that also.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--Strings for Dashboard-->


    <!--Caregory-->
    <string name="hill">Hills and Mountains</string>
    <string name="sea">River and Sea Beaches</string>
    <string name="forest">Forests</string>
    <string name="historical">Cultural Heritages</string>

    <!--Titles-->
    <string name="favourites">YOUR FAVOURITES</string>
    <string name="tourist_favourites">TOURISTS FAVOURITE</string>

    <string name="category">CATEGORIES</string>
    <string name="search_text">Where are you going?...</string>
    <string name="view_all">View All</string>

    <!--login screen-->

    <string name="travelCove">Travel Cove</string>
    <string name="welcome">Welcome</string>
    <string name="app_motto1">An app that will make your journey</string>
    <string name="app_motto2">easier and delightful</string>
    <string name="app_motto3">An app where journey begins</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="show_password">Show Password</string>
    <string name="create_account">"Don\'t have an account? <b><i><u>Sign up</u></i></b> </string>

    <string name="account_exist">Already have an account? <b><i><u>Sign in</u></i></b></string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>


</resources>