<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon">

        </item>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/profile_icon">

        </item>
        <item
            android:id="@+id/nav_category"
            android:title="@string/all_categories"
            android:icon="@drawable/category_icon">

        </item>

        <item
            android:id="@+id/nav_instruction"
            android:title="Credits"
            android:icon="@drawable/instruction_icon">

        </item>
    </group>


</menu>