<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/travel_cove"
    tools:context=".User.Login">


    <EditText
        android:id="@+id/passwordInputLogin"
        android:layout_width="294dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="368dp"
        android:autofillHints="@string/password"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/lock_ic"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="216dp"
        android:fontFamily="cursive"
        android:text="@string/app_motto3"
        android:textColor="@color/black"

        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInputLogin"
        android:layout_width="294dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="304dp"
        android:autofillHints="@string/email"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/email_ic"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/showPasswordLogin"
        android:layout_width="136dp"
        android:layout_height="37dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="432dp"
        android:hint="@string/show_password"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="536dp"
        android:autofillHints="@string/email"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/purple_700"
        android:backgroundTintMode="add"
        android:ems="15"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#9EFFFFFF"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:onClick="signUpButtonHandle"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginField" />



    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpField" />


</androidx.constraintlayout.widget.ConstraintLayout>