<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Welcome_page"
    android:id="@+id/drawer_layput">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/badami"
        android:layout_gravity="start"
        android:theme="@style/navigationTheme"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu">

    </com.google.android.material.navigation.NavigationView>



    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/badami"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/menu_icon"></ImageView>

            <TextView
                android:id="@+id/welcome"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="62dp"
                android:fontFamily="@font/segoeprb"
                android:text="Welcome "
                android:textColor="@color/black"
                android:textColorHighlight="#E4E3E1"
                android:textSize="26sp"></TextView>

            <TextView
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_marginStart="-170dp"
                android:fontFamily="@font/segoeprb"
                android:text="Welcome "
                android:layout_toRightOf="@+id/welcome"
                android:textColor="@color/black"
                android:textColorHighlight="#E4E3E1"
                android:textSize="26sp"></TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:background="#E4E3E1"
            android:elevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="82dp"
                android:layout_marginLeft="15dp"
                android:onClick="searchIcon"
                android:text="@string/search_text"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:onClick="searchIcon"
                android:layout_marginRight="250dp"
                android:src="@drawable/search_icon" />


        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/saint_martin"></ImageView>



                    <ImageView
                        android:id="@+id/logo_1"
                        android:layout_width="125dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="225dp"
                        android:layout_marginTop="180dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/logo2"></ImageView>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="376dp"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/your_favourites"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprishma"
                            android:text="@string/favourites"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:textStyle="bold"></TextView>
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="25dp"
                            android:layout_toRightOf="@+id/your_favourites"
                            android:src="@drawable/saved_blue">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="30dp"
                            android:text="@string/view_all"
                            android:textColor="#00000000"
                            android:textSize="13sp"></TextView>
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/your_favourite_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="235dp"></androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="376dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprishma"
                            android:text="@string/tourist_favourites"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:textStyle="bold"></TextView>
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="280dp"
                            android:src="@drawable/instruction_icon">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="1dp"
                            android:text="@string/view_all"
                            android:textColor="#00000000"
                            android:textSize="13sp"></TextView>
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/tourist_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"></androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="376dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/imprishma"
                            android:text="@string/category"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:textStyle="bold"></TextView>

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="160dp"
                            android:src="@drawable/category_icon">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="30dp"
                            android:text="@string/view_all"
                            android:onClick="viewCat"
                            android:textColor="@color/black"
                            android:textSize="13sp"></TextView>
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categories_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"></androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>



            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>